--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "devDependencies": {
     "@stencil/core": "^1.3.3"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EPLKleijntjens/Media-View-Component"
+  }
 }
