--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "media-view-component",
-  "version": "0.2.4",
-  "description": "A webcomponent that can display an image or video and makes fitting and panning over them easy.",
+  "version": "0.2.5",
+  "description": "A webcomponent that can display an image or video and makes fitting and panning over it easy.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "es2015": "dist/esm/index.mjs",
